kube-jet-movie-msa-ui-deployment.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: jet-movie-msa-ui
spec:
  replicas: 10
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: jet-movie-msa-ui
  template:
    metadata:
      labels:
        app: jet-movie-msa-ui
    spec:
      containers:
        - name: jet-movie-msa-ui
          image: icn.ocir.io/axlpeslmb1ng/movie/jet-movie-msa-ui:8d185fe16bf8a3a33d6bcaec022fd8dcc341ab3a
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
      imagePullSecrets:
        - name: ocirsecret
  strategy:
    canary:
      maxSurge: "80%"
      maxUnavailable: 0
      steps:
        - setWeight: 20
        - pause: {}
