kube-springboot-movie-people-api-deployment.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: springboot-movie-people-api
spec:
  replicas: 8
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: springboot-movie-people-api
  template:
    metadata:
      labels:
        app: springboot-movie-people-api
    spec:
      containers:
      - name: springboot-movie-people-api
        image: dandonghukim/springboot-movie-people-api:4b0a4458e3cd5bc014ac53be0ce92f2c86bae60a
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
  strategy:
    canary:
      maxSurge: "25%"
      maxUnavailable: 0
      steps:
      - setWeight: 25
      - pause: { duration: 1m }
