kube-springboot-movie-people-api-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-movie-people-api-svc
spec:
  selector:
    app: springboot-movie-people-api
  ports:
    - port: 31000
      targetPort: 8080
  type: ClusterIP
